--- a/hw_11/jenkinsfile
+++ b/hw_11/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         any {
             image 'tomcat9'
-            args '-v /var/run/docker.sock:/var/run/docker.sock -u root'
+            args '-v /tmp:/tmp'
         }
     }
 
