--- a/hw_11/jenkinsfile
+++ b/hw_11/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 
         stage ('build image') {
             steps {
-                sh 'docker build --tag boxfuseapp .'
+                sh 'docker build -t boxfuseapp .'
             }
         }
 
