--- a/hw_11/jenkinsfile
+++ b/hw_11/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        docker {
+        any {
             image 'kovalalexey/assembly'
             args '-v /tmp:/tmp'
         }
