--- a/hw_11/jenkinsfile
+++ b/hw_11/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         any {
-            image 'kovalalexey/assembly'
+            image 'kovalalexey/build_agent'
             args '-v /tmp:/tmp'
         }
     }
