--- a/hw_11/jenkinsfile
+++ b/hw_11/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         any {
             image 'kovalalexey/build_agent'
-            args '-v /tmp:/tmp'
+            args '-v docker run -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
 
